# halberd

./: .gitignore  README.md
new_rs/halberd/: Cargo.toml  build.rs
new_rs/halberd/proto/: halberd.proto
new_rs/halberd/src/: auth.rs  crypto.rs  dns.rs  lib.rs  main.rs  ramp.rs
